# damn-vulnerable-appsec-platform

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.canary-demo.yml  docker-compose.test.yml  docker-compose.yml
.github/workflows/: ci.yml
api/: Dockerfile  pyproject.toml  requirements.txt
api/app/: main.py  models.py  ssrf.py  store.py  worker_client.py  ws.py
api/tests/: test_beacons.py  test_config.py  test_scans.py  test_ssrf.py  test_store.py  test_upload_validation.py  test_ws.py
db/init/: 001_canary_data.sql
docs/: BUILD_CANARIES_DEMO.md  CONTRACTS.md  SPEC.md
e2e/: Dockerfile  requirements.txt  test_e2e.py
frontend/: .dockerignore  .eslintrc.cjs  .gitignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/public/: docs-crawl.html
frontend/src/: App.tsx  findings.ts  format.ts  index.css  main.tsx  modules.ts  presentation.ts  stream-context.test.tsx  stream-context.tsx  types.ts
listener/: Dockerfile  pyproject.toml  requirements.txt
listener/app/: decode.py  forward.py  main.py
listener/tests/: test_decode.py  test_routes.py
scripts/: create_canarytokens.py
seeds/: k8s-sa-token  synthetic.env
worker/: Dockerfile  pyproject.toml  requirements.txt
worker/app/: __init__.py  beacon.py  config.py  fetch.py  job.py  main.py  models.py  sanitize.py  secret_patterns.py  seeds.py  ssrf.py  templating.py
worker/app/analyzers/: __init__.py  _common.py  checkov.py  eslintrc.py  gemspec.py  npm_lifecycle.py  rubocop.py  secret_scanner.py  setup_py.py  terragrunt.py
worker/tests/: conftest.py  test_beacon.py  test_evil_repos.py  test_fetch_archive.py  test_job_and_api.py  test_real_tools.py  test_sample_repos.py  test_sanitize.py  test_secret_scanner.py  test_ssrf.py  test_templating.py  test_terragrunt_analyzer.py  test_watermark.py
(+57 files in other folders)
