[project]
name = "dvap-worker"
version = "0.1.0"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["B008"]  # FastAPI uses function calls in default args (File/Form)

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
# evil-repos contain intentionally-loose payload code; never type-check them.
exclude = ['(^|/)evil-repos/', '(^|/)tests/']

[tool.pytest.ini_options]
testpaths = ["tests"]
